# PoC-VectorSearchModelComparer-GpoSalinas

./: .gitignore  README.md  diagram.drawio  main.ipynb  requirements.txt
lambda-lex-agent/: Cargo.toml  Makefile  README.md  env.json  samconfig.toml  template.yaml
lambda-lex-agent/events/: test-event.json
lambda-lex-agent/src/: main.rs
streamlit_app/: app.py  requirements.txt
streamlit_app/uploaded_txts/: Social Programs Manual.txt
uploaded_txts/: Guardadito Kids.txt
