[package]
name = "LambdaSalinasLexAgent"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-bedrockagentruntime = "1.81.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
lambda_runtime = "0.8.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap   = { version = "2.2", features = ["serde"] }
